String Handling in progress
Hexa Handled
Removed line breaks
TODO: handle escape sequences
TODO: Check String error cases

--- a/Tests/myTest.in
+++ b/Tests/myTest.in
@@ -1,3 +1,7 @@
+2
+3
+4
+
 stream
 hamam is the best ever
 evr
@@ -10,3 +14,10 @@ endstream
 (asdasdasdasdasdas \
 zxcascasdasdasdasd \
 asdasdasd)
+
+%asidkasdlkasdlkasldkalskmdlak
+
+<686578326173636969>
+
+(All are the same)
+<41 6c 6c 20 61 72 65 20 74 68 65 20 73 61 6d 65>
